fix(console): wrap connector id with copytoclipboard (#1025)
* fix(console): wrap connector id with copytoclipboard

* fix: copytoclipboard padding

--- a/packages/console/src/components/CopyToClipboard/index.module.scss
+++ b/packages/console/src/components/CopyToClipboard/index.module.scss
@@ -8,13 +8,14 @@
   font-family: 'Roboto Mono', monospace;
   cursor: default;
 
-  &.contained,
-  &.border {
-    padding: _.unit(2) _.unit(3);
+  &.contained {
+    padding: _.unit(1) _.unit(2);
     background: var(--color-layer-2);
   }
 
   &.border {
+    padding: _.unit(2) _.unit(3);
+    background: var(--color-layer-2);
     border: 1px solid var(--color-border);
   }
 
