--- a/packages/console/src/pages/ApiResourceDetails/index.module.scss
+++ b/packages/console/src/pages/ApiResourceDetails/index.module.scss
@@ -29,10 +29,6 @@
         font: var(--font-title-large);
         color: var(--color-text);
       }
-
-      .copy {
-        padding: _.unit(1) _.unit(2);
-      }
     }
   }
 
