--- a/packages/console/src/pages/ApplicationDetails/index.module.scss
+++ b/packages/console/src/pages/ApplicationDetails/index.module.scss
@@ -84,9 +84,5 @@
       @include _.vertical-bar;
       height: 12px;
     }
-
-    .copy {
-      padding: _.unit(1) _.unit(2);
-    }
   }
 }
