--- a/packages/console/src/pages/ConnectorDetails/index.module.scss
+++ b/packages/console/src/pages/ConnectorDetails/index.module.scss
@@ -55,7 +55,7 @@
       color: var(--color-text);
     }
 
-    .id {
+    .text {
       font: var(--font-subhead-2);
       color: var(--color-caption);
     }
